# timesfm-crypto

./: README.md  bitcoin.csv  bitcoin_prices.csv  pyproject.toml  timesfm_crpyto.ipynb
.ipynb_checkpoints/: pyproject-checkpoint.toml
